LDEV-5138 Set leader only on his activity entry, not on any user entry